--- a/portfolio/src/components/greeting/greeting.css
+++ b/portfolio/src/components/greeting/greeting.css
@@ -22,7 +22,5 @@
 
 /* Responsive Design */
 @media screen and (max-width: 768px) {
-    #greeting {
-        
-    }
+
   }
